--- a/src/M2L/UserBundle/Resources/config/routing.yml
+++ b/src/M2L/UserBundle/Resources/config/routing.yml
@@ -8,3 +8,7 @@ login:
 
 login_check:
     pattern:   /login_check
+
+m2l_profil_edit:
+    path:    /profil/edit
+    defaults: { _controller: M2LUserBundle:User:edit }
