--- a/src/M2L/UserBundle/Resources/config/routing.yml
+++ b/src/M2L/UserBundle/Resources/config/routing.yml
@@ -12,3 +12,7 @@ login_check:
 m2l_profil_edit:
     path:    /profil/edit
     defaults: { _controller: M2LUserBundle:User:edit }
+
+m2l_profil_view:
+    path:    /profil/{id}
+    defaults: { _controller: M2LUserBundle:User:view }
